# saf_openai

./: .gitignore  LICENSE  README.md  pyproject.toml
saf_openai/: openai_resource.py
